2008-04-07  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* classic/rcsslogplay_classic:
	* qt4/rcsslogplay:
	* qt4/Makefile.am:
	* qt4/main_window.cpp:
	* qt4/main_window.h:
	* qt4/options.cpp:
	* qt4/options.h:
	- implemented the option to invoke external monitor.

	* qt4/circle_2d.cpp:
	* qt4/circle_2d.h:
	* qt4/line_2d.cpp:
	* qt4/line_2d.h:
	* qt4/log_slider_tool_bar.cpp:
	* qt4/log_slider_tool_bar.h:
	* qt4/Makefile.am:
	* qt4/angle_deg.h:
	* qt4/config_dialog.cpp:
	* qt4/config_dialog.h:
	* qt4/field_canvas.cpp:
	* qt4/log_player_tool_bar.cpp:
	* qt4/log_player_tool_bar.h:
	* qt4/main_window.cpp:
	* qt4/main_window.h:
	* qt4/options.cpp:
	* qt4/options.h:
	* qt4/player_painter.cpp:
	* qt4/player_painter.h:
	* qt4/score_board_painter.cpp:
	* qt4/score_board_painter.h:
	- fixed several minor problems.
	- changed the designe of minimum mode.
	- added show-kick-accel-area option.

	* qt4/ball_painter.cpp:
	* qt4/config_dialog.cpp:
	* qt4/detail_dialog.cpp:
	* qt4/field_canvas.cpp:
	* qt4/field_painter.cpp:
	* qt4/main_window.cpp:
	* qt4/main_window.h:
	* qt4/options.cpp:
	* qt4/options.h:
	* qt4/player_painter.cpp:
	* qt4/score_board_painter.cpp:
	- implemented minimum mode.

2008-04-06  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* qt4/detail_dialog.cpp:
	* qt4/detail_dialog.h:
	* qt4/main_data.cpp:
	* qt4/player_painter.cpp:
	- added tackle probability to DetailDialog.

	* rcsslogplayer/types.h:
	* rcsslogplayer/util.cpp:
	- fixed hreashold values for binary format.

2008-04-05  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* qt4/disp_holder.cpp:
	* qt4/field_canvas.cpp:
	* qt4/log_player_tool_bar.cpp:
	* qt4/main_data.cpp:
	* qt4/main_window.cpp:
	* qt4/options.cpp:
	* qt4/score_board_painter.cpp:
	- addec check of librcssgz.
	- disabled monitor related actions.

	* qt4/disp_holder.cpp:
	- added the restriction to the max number of showinfo.

	* classic/logplayer.cpp:
	- fixed a bug in the save log initialization.

	* qt4/monitor_server.cpp: