@@ -1,21 +1,21 @@
 /* XPM */
 static char * rec_xpm[] = {
 "16 16 2 1",
-" 	c #000000",
-".	c #FFFFFF",
-"................",
-"................",
-"................",
-"........ .......",
-".....       ....",
-"....         ...",
-"....         ...",
-"...           ..",
-"...           ..",
-"...           ..",
-"....         ...",
-"....         ...",
-".....       ....",
-"........ .......",
-"................",
-"................"};
+" 	c None",
+".	c #FF0000",
+"                ",
+"                ",
+"                ",
+"        .       ",
+"     .......    ",
+"    .........   ",
+"    .........   ",
+"   ...........  ",
+"   ...........  ",
+"   ...........  ",
+"    .........   ",
+"    .........   ",
+"     .......    ",
+"        .       ",
+"                ",
+"                "};
